<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InputActivity">

    <Spinner
        android:id="@+id/food_type_spinner"
        android:layout_width="252dp"
        android:layout_height="48dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="38dp"
        android:entries="@array/type_dropdown"
        app:layout_constraintBottom_toTopOf="@+id/has_gluten"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Add_to_Cart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="138dp"
        android:layout_marginEnd="139dp"
        android:layout_marginBottom="62dp"
        android:text="@string/add_to_cart"
        app:layout_constraintBottom_toTopOf="@+id/done_shopping"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/done_shopping"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="113dp"
        android:layout_marginEnd="113dp"
        android:layout_marginBottom="32dp"
        android:text="@string/i_m_done_shopping"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/has_gluten"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="42dp"
        android:text="@string/does_this_product_contain_gluten"
        app:layout_constraintBottom_toTopOf="@+id/product_name_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/product_name_input"
        android:layout_width="226dp"
        android:layout_height="54dp"
        android:layout_marginStart="93dp"
        android:layout_marginEnd="93dp"
        android:layout_marginBottom="46dp"
        android:ems="10"
        android:hint="@string/product_name"
        android:inputType="textPersonName"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toTopOf="@+id/aisle_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/expire_date_input"
        android:layout_width="229dp"
        android:layout_height="52dp"
        android:layout_marginStart="91dp"
        android:layout_marginEnd="91dp"
        android:layout_marginBottom="55dp"
        android:ems="10"
        android:hint="@string/product_expiration_date"
        android:inputType="date"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toTopOf="@+id/Add_to_Cart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/aisle_input"
        android:layout_width="252dp"
        android:layout_height="51dp"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="52dp"
        android:ems="10"
        android:hint="@string/aisle_you_found_the_product_in"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toTopOf="@+id/expire_date_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>